--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.9.2",
-    "morgan": "^1.10.0",
-    "vite": "^6.0.6"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build:ui": "rm -rf dist && cd ../frontend && npm run build && cp -r dist ../backend",
+		"deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
+		"lint": "eslint .."
+	},
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"mongodb": "^6.12.0",
+		"mongoose": "^8.9.2",
+		"morgan": "^1.10.0",
+		"vite": "^6.0.6"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.17.0",
+		"@stylistic/eslint-plugin-js": "^2.12.1",
+		"eslint": "^9.17.0",
+		"globals": "^15.14.0",
+		"nodemon": "^3.1.9"
+	}
 }
